feat: add handle global exception

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=health-me
+
+# spring.datasource.url=jdbc:sqlite:${user.home}/mydb.sqlite
+# spring.datasource.driver-class-name=org.sqlite.JDBC 
+
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
+# spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:sqlite:./data/app.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.sql.init.mode=always
