feat: implement user registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=health-me
 
-# spring.datasource.url=jdbc:sqlite:${user.home}/mydb.sqlite
-# spring.datasource.driver-class-name=org.sqlite.JDBC 
 
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
-# spring.jpa.show-sql=true
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
-spring.datasource.url=jdbc:sqlite:./data/app.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.sql.init.mode=always
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
