--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=health-me
 
-
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -9,3 +8,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.sql.init.mode=always
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+jwt.secret={YJWT_SECRET}
+jwt.expiration=3600000
