--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,12 @@
 			<artifactId>java-jwt</artifactId>	
 			<version>4.5.1</version>		
 		</dependency>
-		
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.5</version>
+		</dependency>		
+			
 	</dependencies>
 
 	<build>
