--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.config.import=optional:file:.env[.properties]
 spring.application.name=health-me
 
 spring.datasource.url=${DB_URL}
@@ -8,6 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.sql.init.mode=always
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+springdoc.api-docs.path=/api-docs
 
-jwt.secret={YJWT_SECRET}
+jwt.secret=${JWT_SECRET}
 jwt.expiration=3600000
